# Nmap Changelog ($Id$); -*-text-*-

o Removed 6/8, 7/8, and 55/8 networks from the list of "reserved" IP addresses
  that Nmap uses to filter -iR randomly generated targets. These address ranges
  belong to the U.S. Department of Defense, so users wanting to avoid those
  ranges should use their own exclusion lists with --exclude or --exclude-file.
  [Daniel Miller]

o [NSE] whois-ip: Don't request a remote IANA assignments data file when the
  local filesystem will not permit the file to cached in a local file. [jah]

o [NSE] Updated http-php-version hash database to cover all versions from PHP
  4.1.0 to PHP 5.4.45. Based on scans of a few thousand PHP web servers pulled
  from Shodan API (https://www.shodan.io/) [Daniel Miller]

o [GH#272][GH#269] Give option parsing errors after the usage statement, or
  avoid printing the usage statement in some cases. The options summary has
  grown quite large, requiring users to scroll to the top to see the error
  message. [Abhishek Singh]

o [GH#284] Fix retrieval of route netmasks on FreeBSD. IPv6 routes were given
  /32 netmasks regardless of actual netmask configured, resulting in failed
  routing. Reported by Martin Gysi. [Daniel Miller]

o Use the same ScanProgressMeter for FTP bounce scan (-b) as for the other scan
  types, allowing periodic status updates with --stats-every or keypress
  events.  [Daniel Miller]

o [GH#274] Use a shorter pcap_select timeout on OpenBSD, just as we do for OS
  X, old FreeBSD, and Solaris, which use BPF for packet capture and do not have
  properly select-able fds. Fix by OpenBSD port maintainer [David Carlier]

o [NSE] Added ms-sql-ntlm-info for extracting OS version and sometimes hostname
  from MS SQL Server instances via the NTLM challenge message. [Justin Cacak]

o [NSE] Added nntp-ntlm-info for extracting hostname and sometimes OS version
  from NTLM-auth-enabled NNTP services. [Justin Cacak]

o [NSE] Added pop3-ntlm-info for extracting hostname and sometimes OS version